# ca_tester

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  poznamky.txt
.cache/clangd/index/: convex_hull.cpp.7AD5E4B9FB6D918A.idx  convex_hull.hpp.DECADA5A3DF2A784.idx  dilation.cpp.742BD290AC6E53E8.idx  dilation.hpp.24613ECCEB841709.idx  engine.cpp.321596C0A92AEE04.idx  engine.hpp.17DC5E97150FC1C4.idx  erosion.cpp.E1A820D6EADC6955.idx  erosion.hpp.CC6382CE5858B9EB.idx  grid.cpp.46E4488FC7BA9E51.idx  grid.hpp.81F6C81BE6D75BD3.idx  grid_fwd.hpp.3DDD3E150FB1897F.idx  imconfig.h.B7C04CFF1BC87677.idx  imgui.cpp.3FEA6AE9C4CA8117.idx  imgui.h.94ECE4D874587DA8.idx  imgui_demo.cpp.75D2AF2D7AC8BEC3.idx  imgui_draw.cpp.94BF07AEB0A13232.idx  imgui_impl_sdl2.cpp.3703A84979D6084B.idx  imgui_impl_sdl2.h.F4D920871BC0F591.idx  imgui_impl_sdlrenderer2.cpp.BF1AFAC6CF40747E.idx  imgui_impl_sdlrenderer2.h.BCCA988613F2482D.idx  imgui_internal.h.2BEFC816E4806F9A.idx  imgui_tables.cpp.A1BCD535D316FF07.idx  imgui_widgets.cpp.8071EDCB60068F20.idx  imstb_rectpack.h.D7E50F5E3A599002.idx  imstb_textedit.h.4F1B50E3B24EE78D.idx  imstb_truetype.h.467DE9CB71588F04.idx  io.cpp.0A68B336DF3AE904.idx  io.hpp.4CB921EE828CBAF8.idx  main.cpp.8ECC91AC5D922B65.idx  renderer.cpp.ED827E1B24E4C398.idx  renderer.hpp.3C843E095D068EFF.idx  rule.hpp.DCE8FBD53F3E5B3B.idx  rule_context.cpp.AE0D15E4EC8D45B9.idx  rule_context.hpp.221F608ADBC0CC5A.idx  rules_conway.cpp.FE5C5EF92F4DC469.idx  rules_conway.hpp.1C6CE0A87B6B96C1.idx
cmake/toolchains/: macos-libcxx.cmake
saves/: README.md  bad_rectangle1.json  debugging_after_first_wrong.json  debugging_before_first_wrong.json  deskovky.json  elementary.json  grid_example.json  grid_example_2.json  grid_save.json  grid_save_examine.json  list.txt  random_name.json  save_na_ukazku_nutne_dodelat.json  single_window_grid_res.json  single_window_single_res.json  windows_1_res.json  windows_2_res.json  windows_convex_fail.json
saves/convex_hull_examples/full/: nightmare.json
saves/corners/: 1.json  2.json  3.json  4.json  main_example.json  perfect.json
saves/damaged_rectangles/: 1.json  2.json  issue_example_1.json  main_example.json
saves/example_data/rectangle/convex_hull/: 1.json
saves/example_data/rectangle/edge_detection/: 1.json
saves/example_data/rectangle/vertex_method/: 1.json
saves/example_data/sym/vertex_method/: 1.json
saves/final_examples/edge_completion_single/: 1.json  2.json
saves/perfect_single/: 1.json  1_res.json  2.json  2_res.json  3.json  3_wrong_res.json  4_res_edge_issue.json
saves/real_data_showcase/: 4_okna.json  4_windows_with_tree.json
saves/rectangle_inputs/: perfect_double_rim_rectangle.json
saves/rotate_fix_method/negative_examples/: 0.json  45_bad_shape_rect.json  45_bad_shape_rect_res.json  45_rect.json  45_rect_res.json
saves/rotate_fix_method/positive_examples/: 0.json  0_res.json  45_1.json  45_1_res.json  45_perfect.json  45_perfect_rect.json  45_perfect_rect_res.json  45_perfect_res.json
src/aditional_rules/: all_aditional_rules.hpp  anti_convex_hull.cpp  anti_convex_hull.hpp  clearing_rule.cpp  clearing_rule.hpp  dilation.cpp  dilation.hpp  edge_detection.cpp  edge_detection.hpp  erosion.cpp  erosion.hpp  example_rule.cpp  example_rule.hpp  fix_rotate_fix_rule.cpp  fix_rotate_fix_rule.hpp  fixing_rectangle.cpp  fixing_rectangle.hpp  line_completor.cpp  line_completor.hpp  renew_origin.cpp  renew_origin.hpp  rotation_rule.cpp  rotation_rule.hpp  shape_enforcement_rule.cpp  shape_enforcement_rule.hpp  wolfram_rules.cpp  wolfram_rules.hpp
src/app_sdl/: main.cpp  renderer.cpp  renderer.hpp
src/convex_hull/: convex_hull.cpp  convex_hull.hpp
src/core/: engine.cpp  engine.hpp  grid.cpp  grid.hpp  io.cpp  io.hpp  rule.hpp  rule_context.cpp  rule_context.hpp  rule_registry.hpp  rules_conway.cpp  rules_conway.hpp
